<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Sascha Peilicke
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="contact">Contact</string>
    <string name="feedback_mail_subject_template">Feedback for %1$s</string>
    <string name="follow">Follow</string>
    <string name="follow_on_twitter">Follow us on Twitter</string>
    <string name="get_app_template">Get the %1$s Android app</string>
    <string name="join_facebook_group">Like the Facebook page</string>
    <string name="join_google_plus_group">Join the Google+ community</string>
    <string name="provide_feedback">Provide feedback</string>
    <string name="rate_us_in_the_play_store">Rate us in the Play Store</string>
    <string name="recommend_to_a_friend">Recommend the app to a friend</string>
    <string name="send_email">Send e-mail…</string>
    <string name="share_via">Share via…</string>
    <string name="support_us">Support us</string>

</resources>
