<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/follow_title"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/follow"
            android:textColor="?attr/colorAccent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/open_facebook_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_facebook"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/join_facebook_group"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/follow_title"/>

        <TextView
            android:id="@+id/join_google_plus_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_google_plus"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/join_google_plus_group"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/open_facebook_group"/>

        <TextView
            android:id="@+id/follow_twitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_twitter"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/follow_on_twitter"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/join_google_plus_group"/>

        <TextView
            android:id="@+id/support_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/support_us"
            android:textColor="?attr/colorAccent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/follow_twitter"/>

        <TextView
            android:id="@+id/rate_play_store"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_star"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/rate_us_in_the_play_store"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/support_title"/>

        <TextView
            android:id="@+id/recommend_to_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_share"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/recommend_to_a_friend"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rate_play_store"/>

        <TextView
            android:id="@+id/contact_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/contact"
            android:textColor="?attr/colorAccent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recommend_to_friend"/>

        <TextView
            android:id="@+id/provide_feedback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_email"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/provide_feedback"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact_title"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>